--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -9,21 +9,20 @@
     <title>React Chess</title>
   </head>
   <body>
-    <div id="root">
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script
-        async
-        src="https://www.googletagmanager.com/gtag/js?id=G-8YB1C3DJRB"
-      ></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-          dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
+    <div id="root"></div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-8YB1C3DJRB"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-        gtag('config', 'G-8YB1C3DJRB');
-      </script>
-    </div>
+      gtag('config', 'G-8YB1C3DJRB');
+    </script>
   </body>
 </html>
